[gd_scene load_steps=6 format=3 uid="uid://ckxd4jjj6mxa0"]

[ext_resource type="Texture2D" uid="uid://cgia6o3vr4fbo" path="res://assets/lobby/Icon_Wywy.png" id="1_ia4xm"]
[ext_resource type="Script" path="res://scripts/host_lobby.gd" id="1_ky6xf"]
[ext_resource type="Texture2D" uid="uid://db2kfx4g70qeu" path="res://assets/lobby/Icon_Stickman.png" id="2_7bokt"]

[sub_resource type="LabelSettings" id="LabelSettings_mbwhg"]
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_l2fkt"]
font_size = 75

[node name="host_lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ky6xf")

[node name="Icon_Wywy" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.3
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ia4xm")
expand_mode = 1

[node name="Icon_Stickman" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7bokt")
expand_mode = 1

[node name="YOU" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.6
anchor_right = 0.3
anchor_bottom = 0.75
offset_top = -2.89999
offset_bottom = 2.90002
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "You"
label_settings = SubResource("LabelSettings_mbwhg")
horizontal_alignment = 1
uppercase = true
language = "English"

[node name="Player 2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.6
anchor_right = 0.9
anchor_bottom = 0.75
offset_top = -2.89999
offset_bottom = 2.90002
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "???"
label_settings = SubResource("LabelSettings_l2fkt")
horizontal_alignment = 1
language = "English"

[node name="StartGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.65
anchor_right = 0.65
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Waiting for second player..."

[node name="Player Name" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 486.0
offset_top = 339.0
offset_right = 665.0
offset_bottom = 399.0
placeholder_text = "Enter your name"

[node name="Status Message" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_right = 0.65
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="Status Message"]
wait_time = 5.0

[connection signal="button_up" from="StartGameButton" to="." method="_on_start_game_button_button_up"]
